FIx task list alignment.

--- a/nanny/static/stylesheets/custom.css
+++ b/nanny/static/stylesheets/custom.css
@@ -485,3 +485,12 @@ div.error-summary ul.error-summary-list {
 .nanny-form {
     width: 75% !important;
 }
+
+.task-list-align {
+  padding: 0 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+  @media (min-width: 641px) {
+    .column-two-thirds {
+      float: left; } }
